# aoc-2025

./: .env  Cargo.toml  README.md
src/: aoc.rs  day01.rs  day02.rs  grid.rs  lib.rs  main.rs  math_exts.rs  parsing.rs  prelude.rs  runner.rs
src/exts/: matrix.rs  mod.rs  numeric.rs  parsing.rs
