[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
indoc = "2.0.7"
itertools = "0.14.0"
libaoc = "0.1.55"
nom = "8.0.0"
num-traits = "0.2.19"
regex = "1.12.2"
seq-macro = "0.3.6"
topological-sort = "0.2.2"

[lints.rust]
refining_impl_trait_internal = "allow"
